--- a/src/scss/pages/_homepage.scss
+++ b/src/scss/pages/_homepage.scss
@@ -395,7 +395,6 @@ main.l-container {
 
     @include bp-min('sm') {
       max-width: 65ch;
-      font-size: 1rem;
     }
   }
 
